--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tsc": "vue-tsc -w"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
