--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"dev": "vite",
 		"build": "vue-tsc -b && vite build",
 		"preview": "vite preview",
-		"tsc": "vue-tsc -w",
-		"test": "vitest"
+		"tsc": "vue-tsc --noEmit -w",
+		"test": "vitest",
+		"lint": "eslint ./src",
+		"lint:fix": "eslint ./src --fix"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.45.0",
@@ -18,12 +20,18 @@
 		"vue-router": "^4.4.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.9.0",
 		"@vitejs/plugin-vue": "^5.1.1",
 		"autoprefixer": "^10.4.19",
+		"eslint": "^9.9.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-vue": "^9.27.0",
+		"globals": "^15.9.0",
 		"postcss": "^8.4.40",
 		"supabase": "^1.187.10",
 		"tailwindcss": "^3.4.7",
 		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.2.0",
 		"vite": "^5.3.5",
 		"vitest": "^2.0.5",
 		"vue-tsc": "^2.0.29"
